# llm-write

./: .gitignore  LICENSE  README.md  pyproject.toml
gpt-write/: main.py  prompts.py  util.py
gptwrite/: core.py  lang_conf.py  main.py  prompts.py  questionary_ui.py  util.py
gptwrite/locales/: messages.en.yaml  messages.ja.yaml
llmwrite/: accepted_language.py  core.py  lang_conf.py  main.py  prompts.py  questionary_ui.py
llmwrite/locales/: messages.en.yaml
locales/: messages.en.yaml  messages.ja.yaml
tests/: test_lang_conf.py  test_prompts.py
