[tool.poetry]
name = "llmwrite"
version = "0.1.6"
description = "CLI for Automated article writing (Powered by GPT-3)"
authors = ["otakumesi <bakednt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/otakumesi/llm-write"
repository = "https://github.com/otakumesi/llm-write"
readme = "README.md"
keywords = ["gpt", "openai", "cli", "article", "writing"]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
openai = "*"
python-i18n = {extras = ["yaml"], version = "*"}
iso639-lang = "*"
questionary = "^1.10.0"
yaspin = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
black = "*"
pyright = "^1.1.303"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmwrite = "llmwrite.main:write"